# ros_qr_tracker

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST  MANIFEST.in  README.md  package.xml  pep8.sh  pip-requirements-test.txt  pip-requirements.txt  pylint.rc  setup.py  test.sh  tox.ini
msg/: Percept.msg
nodes/: qr_tracker.py  webcam.py
scripts/: create_qr_code.py
tests/: test_qr_functions.py  test_qr_node.py
