<package>
  <name>ros_qr_tracker</name>
  <version>0.2.0</version>
  <description>
    Tracks and identifies QR codes from a video stream.
  </description>
  <maintainer email="chrisspen@gmail.com">Chris Spencer</maintainer>
  <license>MIT</license>
  <url>https://github.com/chrisspen/ros_qr_tracker</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>zbar</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
